--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.95.2",
     "axios": "^1.13.4",
+    "openai": "^6.18.0",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.3",
     "vue": "^3.5.24",
