--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/ai_agent_portal
+SUPABASE_URL=your-supabase-project-url
+SUPABASE_SERVICE_KEY=your-supabase-service-key
 JWT_SECRET=replace_with_strong_secret
 FRONTEND_URL=http://localhost:5173
 OPENAI_API_KEY=optional_if_using_llm
