--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.6",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "@supabase/supabase-js": "^2.95.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
