--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "vercel-build": "npm run build --output public"
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "axios": "^1.13.4",
