--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
+"config": {
+        "outputDirectory": "dist"
       }
     },
     {
