--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,2 @@
-VITE_API_URL=/.netlify/functions
+VITE_API_URL=http://localhost:3000/api
 VITE_SOCKET_URL=http://localhost:3000
-VITE_SUPABASE_URL="https://lrmwztxzmqgutvmyhwif.supabase.co"
-VITE_SUPABASE_KEY="sb_publishable_O-9EESpFl82RrXs_fTUGgw_u7WU_EY"
-VITE_API_BASE_URL="/.netlify/functions" # If you use relative paths or /api proxy
